; ModuleID = '/home/carl/AnghaBench/linux/drivers/tee/extr_tee_core.c_teedev_ctx_put.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/tee/extr_tee_core.c_teedev_ctx_put.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.tee_context = type { i32, i64 }

@teedev_ctx_release = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @teedev_ctx_put(%struct.tee_context* %0) #0 {
  %2 = alloca %struct.tee_context*, align 8
  store %struct.tee_context* %0, %struct.tee_context** %2, align 8
  %3 = load %struct.tee_context*, %struct.tee_context** %2, align 8
  %4 = getelementptr inbounds %struct.tee_context, %struct.tee_context* %3, i32 0, i32 1
  %5 = load i64, i64* %4, align 8
  %6 = icmp ne i64 %5, 0
  br i1 %6, label %7, label %8

7:                                                ; preds = %1
  br label %13

8:                                                ; preds = %1
  %9 = load %struct.tee_context*, %struct.tee_context** %2, align 8
  %10 = getelementptr inbounds %struct.tee_context, %struct.tee_context* %9, i32 0, i32 0
  %11 = load i32, i32* @teedev_ctx_release, align 4
  %12 = call i32 @kref_put(i32* %10, i32 %11)
  br label %13

13:                                               ; preds = %8, %7
  ret void
}

declare dso_local i32 @kref_put(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
